--- a/library.html
+++ b/library.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Library</h1>
 
-    <h2>New Book</h2>
+    <h2>Add New Book</h2>
 
     <div>
       <label>
@@ -45,8 +45,11 @@
 
     <div>
       <button onclick='handlers.addBook()'>Add Book to Library</button>
-
     </div>
+
+    <h2>Shelf</h2>
+    <ul>
+    </ul>
 
     <script src="library.js"></script>
 </body>
